Fix image overflow and recreate Genius embedly cards

--- a/static/style/artist.css
+++ b/static/style/artist.css
@@ -159,3 +159,51 @@
             "songs songs";
     }
 }
+
+img {
+    object-fit: scale-down;
+    width: 100%;
+    height: 100%;
+}
+
+.embedly_preview a {
+    text-decoration: none;
+}
+
+.gray_container {
+    display: flex;
+    border-radius: var(--radius);
+    box-shadow: var(--shadow);
+    transition: var(--hover-transition);
+}
+
+.gray_container:hover {
+    background: var(--highlighted);
+    transform: var(--hover-transform);
+}
+
+.gray_container div {
+    display: flex;
+    margin: 10px auto 10px auto;
+}
+
+.embedly_preview-text {
+    flex-direction: column;
+    gap: 10px;
+}
+
+.embedly_preview-title {
+    font-weight: 900;
+}
+
+.embedly_preview-dash, .embedly_preview-provider {
+    display: none;
+}
+
+.embedly_preview-thumb img {
+    object-fit: cover;
+    overflow: hidden;
+    margin: 10px;
+    margin-top: auto;
+    border-radius: var(--radius);
+}
